<resources>
    <string name="app_name">HagymApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hagyma Homework Application</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="registration">Registration</string>
    <string name="login_password_again">Password again</string>
    <string name="login_email">Email</string>
    <string name="login_username">Username</string>
    <string name="login_cancel">Cancel</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_my_pictures">My pictures</string>
    <string name="menu_purchased_pictures">Purchased pictures</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_admin_users">Users</string>
    <string name="upload_picture_button">Upload new CAFF file</string>
    <string name="search_btn">Search</string>
    <string name="picture_name_hint_text">Picture name…</string>
    <string name="new_comment_hint_text">New comment…</string>
    <string name="purchase_btn">Purchase</string>
    <string name="new_comment_btn">Add comment</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>
    <string name="caff_name_hint_text">CAFF name…</string>
    <string name="caff_desc_hint_text">Short description of the file…</string>
    <string name="attach_caff_btn">Attach CAFF file</string>
    <string name="save_btn">Save</string>
    <string name="emailTitle">Email:</string>
    <string name="dateTitle">Registration date:</string>
    <string name="passwordTitle">New password:</string>
    <string name="password2Title">New password again:</string>
    <string name="currentPasswordTitle">Current password:</string>
    <string name="deletedUser">This user is deleted.</string>
    <string name="deletedUserItem">%1$s [deleted]</string>
    <string name="testDate">test date 2022.02.02</string>
    <string name="testEmail">test@mail.com</string>
    <string name="testTitle">Test title</string>
    <string name="imageDescription">Caff preview image</string>
    <string name="cancel_btn">Cancel</string>
    <string name="upload_caff_btn">Upload CAFF</string>
    <string name="download_picture_button">Download CAFF</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_logout">Logout</string>
</resources>