<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_my_pictures"
            android:icon="@drawable/ic_menu_my_pictures"
            android:title="@string/menu_my_pictures" />

        <item
            android:id="@+id/nav_purchased_pictures"
            android:icon="@drawable/ic_menu_purchased_pictures"
            android:title="@string/menu_purchased_pictures" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
    </group>
    <group android:id="@+id/group_admin">
        <item
            android:id="@+id/nav_admin_users"
            android:icon="@drawable/ic_menu_admin_users"
            android:title="@string/menu_admin_users" />
    </group>
    <group android:id="@+id/group_logout">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>